# applied-algorithm

./: .gitignore  ADD.cpp  Binary.cpp  BinaryTree.c  CKN  CKN.cpp  CMakeLists.txt  COMMON.cpp  CayConTraiEmPhai.c  ConTro.c  DIGITS.cpp  DMS.cpp  DanhSachLienKetDon.c  LE.cpp  LINKEDLIST.c  MAXSUBSEQ.cpp  NRSSCHEDLIST.cpp  ORDERP.cpp  PARENTHESES.INP  PARENTHESES.cpp  README.md  SERIAL.cpp  SUBSET.cpp  WATERJUG.cpp  a.out  binary  derial  hoanvi.cpp  map_test.cpp  quick-sort-random-input.cpp  quick-sort.cpp  quick-sort.out  serial  subseq.cpp  sudoku.cpp  sumod.cpp  tspcount.cpp  water  water_jug.cpp
BCA/: BCA.cpp
DynamicProgramming/: DIJSUBSEQ.cpp  GOLD.cpp  MACHINE.cpp  MACHINE_solution.cpp  MAXSEQ.cpp  NURSE.cpp  Readme.md  day-con-chung-dai-nhat.cpp
Graph/: BFS.cpp  DFS.cpp  Dijkstra.cpp  Dijkstra.inp  Dijkstra_Solution.cpp  Euler.cpp  Euler.inp  Hamilton.cpp  MaxClique.cpp  MaxClique.inp  MinimalEdge.cpp  MinimumSpanningTree.cpp  TOPO-sort.cpp  do-thi-2-phia.cpp  graph-data.txt  lien-thong-manh-DFS.cpp  lien-thong-manh-DFS.inp  lien-thong.cpp  lien-thong.inp  shortest-path-BFS.inp
branch-and-bound/PHANCONG/: PHANCONG-10  PHANCONG-20.INP  PHANCONG.cpp  phancong.out
branch-and-bound/TSP/: TSP-15  TSP.INP  TSP.cpp  TSP.out
