cmake_minimum_required(VERSION 3.13)
project(applied_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(CKN CKN.cpp)
add_executable(hoanvi hoanvi.cpp)
add_executable(SERIAL SERIAL.cpp)
add_executable(SUBSET SUBSET.cpp)
add_executable(BCA BCA/BCA.cpp)
add_executable(LE LE.cpp)
add_executable(MAXSUBSEQ MAXSUBSEQ.cpp)
add_executable(PARENTHESES PARENTHESES.cpp)
add_executable(quick-sort quick-sort.cpp)
add_executable(MAXSEQ DynamicProgramming/MAXSEQ.cpp)
add_executable(max-lenngth-subseq DynamicProgramming/max-lenngth-subseq.cpp)
add_executable(sumod sumod.cpp)
add_executable(subseq subseq.cpp)
add_executable(tspcount tspcount.cpp)