cmake_minimum_required(VERSION 3.13)
project(applied_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(CKN CKN.cpp)
add_executable(hoanvi hoanvi.cpp)
add_executable(SERIAL SERIAL.cpp)
add_executable(SUBSET SUBSET.cpp)
add_executable(BCA BCA/BCA.cpp)
add_executable(LE LE.cpp)
add_executable(MAXSUBSEQ MAXSUBSEQ.cpp)
add_executable(PARENTHESES PARENTHESES.cpp)
add_executable(quick-sort quick-sort.cpp)
add_executable(MAXSEQ DynamicProgramming/MAXSEQ.cpp)
add_executable(max-lenngth-subseq DynamicProgramming/max-lenngth-subseq.cpp)
add_executable(sumod sumod.cpp)
add_executable(subseq subseq.cpp)
add_executable(tspcount tspcount.cpp)
add_executable(WATERJUG WATERJUG.cpp)
add_executable(map_test map_test.cpp)
add_executable(water_jug water_jug.cpp)
add_executable(day-con-chung-dai-nhat DynamicProgramming/day-con-chung-dai-nhat.cpp)
add_executable(GOLD DynamicProgramming/GOLD.cpp)
add_executable(NURSE DynamicProgramming/NURSE.cpp)
add_executable(MACHINE DynamicProgramming/MACHINE.cpp)
add_executable(MACHINE_solution DynamicProgramming/MACHINE_solution.cpp)
add_executable(DMS DMS.cpp)
add_executable(DFS Graph/DFS.cpp)
add_executable(lien-thong Graph/lien-thong.cpp)
add_executable(BFS Graph/BFS.cpp)
add_executable(lien-thong-manh-DFS Graph/lien-thong-manh-DFS.cpp)
add_executable(TOPO-sort Graph/TOPO-sort.cpp)